--- a/GoogleDrive/App.config
+++ b/GoogleDrive/App.config
@@ -4,6 +4,7 @@
       <add key="user" value="eddy.fishman@gmail.com" />
       <add key="rootFolderId" value="0B7tLOTLzOeFMTzdCRHZXSERueWs" />
       <add key="PresentationsListCache" value="c:\dev\GoogleDrive\GoogleDrive\PresentationsCache.json" />
+      <add key="SpecificPresentationId" value="1ytESYKgYSLHUGJnFeO86v13osdz3AgCTdHy_4YRd3Qc" />
     </appSettings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
