--- a/GoogleDrive/App.config
+++ b/GoogleDrive/App.config
@@ -1,14 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <appSettings>
-      <add key="user" value="eddy.fishman@gmail.com" />
-      <add key="rootFolderId" value="0B7tLOTLzOeFMTzdCRHZXSERueWs" />
-      <add key="PresentationsListCache" value="c:\dev\GoogleDrive\GoogleDrive\PresentationsCache.json" />
-      <add key="SpecificPresentationId" value="1ytESYKgYSLHUGJnFeO86v13osdz3AgCTdHy_4YRd3Qc" />
-    </appSettings>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
-    </startup>
+  <appSettings>
+    <add key="user" value="eddy.fishman@gmail.com" />
+    <add key="rootFolderId" value="0B7tLOTLzOeFMTzdCRHZXSERueWs" />
+    <add key="PresentationsListCache" value="c:\dev\GoogleDrive\GoogleDrive\PresentationsCache.json" />
+    <add key="SpecificPresentationId" value="1ytESYKgYSLHUGJnFeO86v13osdz3AgCTdHy_4YRd3Qc" />
+    <add key="ClientSettingsProvider.ServiceUri" value="" />
+  </appSettings>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
+  </startup>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -21,4 +22,16 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <system.web>
+    <membership defaultProvider="ClientAuthenticationMembershipProvider">
+      <providers>
+        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" />
+      </providers>
+    </membership>
+    <roleManager defaultProvider="ClientRoleProvider" enabled="true">
+      <providers>
+        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
+      </providers>
+    </roleManager>
+  </system.web>
 </configuration>
