Normal slide links

--- a/GoogleDrive/App.config
+++ b/GoogleDrive/App.config
@@ -5,6 +5,12 @@
     <add key="rootFolderId" value="0B7tLOTLzOeFMTzdCRHZXSERueWs" />
     <add key="PresentationsListCache" value="c:\dev\GoogleDrive\GoogleDrive\PresentationsCache.json" />
     <add key="SpecificPresentationId" value="1ytESYKgYSLHUGJnFeO86v13osdz3AgCTdHy_4YRd3Qc" />
+    <add key="LastSlideText" value="⏭" />
+    <add key="NextSlideText" value="⏩" />
+    <add key="PrevSlideText" value="⏪" />
+    <add key="FirstSlideText" value="⏮" />
+    <add key="TextStyle" value="{fontFamily: 'Arial', fontSize:{magnitude: 24, unit: 'PT'}}" />
+    <add key="TextStyleFields" value="fontFamily, fontSize" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
   <startup>
