Finish standard slides

--- a/GoogleDrive/App.config
+++ b/GoogleDrive/App.config
@@ -11,7 +11,11 @@
     <add key="FirstSlideText" value="⏮" />
     <add key="TextStyle" value="{fontFamily: 'Arial', fontSize:{magnitude: 24, unit: 'PT'}}" />
     <add key="TextStyleFields" value="fontFamily, fontSize" />
+    <add key="ParagraphStyleLTR" value="{direction: 'LEFT_TO_RIGHT'}" />
+    <add key="ParagraphStyleRTL" value="{direction: 'RIGHT_TO_LEFT'}" />
+    <add key="ParagraphStyleFields" value="direction" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
+    <add key="LayoutObjectId" value="g24d2e8488f_0_407" />    
   </appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
