Completed slide Id text box

--- a/GoogleDrive/App.config
+++ b/GoogleDrive/App.config
@@ -9,13 +9,18 @@
     <add key="NextSlideText" value="⏩" />
     <add key="PrevSlideText" value="⏪" />
     <add key="FirstSlideText" value="⏮" />
-    <add key="TextStyle" value="{fontFamily: 'Arial', fontSize:{magnitude: 24, unit: 'PT'}}" />
-    <add key="TextStyleFields" value="fontFamily, fontSize" />
-    <add key="ParagraphStyleLTR" value="{direction: 'LEFT_TO_RIGHT'}" />
-    <add key="ParagraphStyleRTL" value="{direction: 'RIGHT_TO_LEFT'}" />
-    <add key="ParagraphStyleFields" value="direction" />
+    <add key="SpeakerNotesTextStyle" value="{fontFamily: 'Arial', fontSize:{magnitude: 24, unit: 'PT'}}" />
+    <add key="SpeakerNotestTextStyleFields" value="fontFamily, fontSize" />
+    <add key="SlideIdTextBoxTextStyle" value="{fontFamily: 'Arial', fontSize:{magnitude: 18, unit: 'PT'}, foregroundColor:{opaqueColor: {rgbColor: {red: 1, green:1, blue: 1}}}}" />
+    <add key="SlideIdTextBoxTextStyleFields" value="fontFamily, fontSize, foregroundColor" />
+    <add key="ParagraphStyleLTR" value="{direction: 'LEFT_TO_RIGHT', alignment: 'CENTER'}" />
+    <add key="ParagraphStyleRTL" value="{direction: 'RIGHT_TO_LEFT', alignment: 'CENTER'}" />
+    <add key="ParagraphStyleFields" value="direction,alignment" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
-    <add key="LayoutObjectId" value="g24d2e8488f_0_407" />    
+    <add key="LayoutObjectId" value="g24d2e8488f_0_407" />
+    <add key="SlidePageIdSize" value="{Height: {Magnitude: 3000000, Unit:'EMU'}, Width: {Magnitude: 3000000, Unit:'EMU'}}" />
+    <add key="SlidePageIdTransform" value="{ScaleX: 0.1829, ScaleY: 0.1312, TranslateX: 8.75, TranslateY: 4690000.8, Unit: 'EMU'}" />
+
   </appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
