Finished Logic - writing console args

--- a/GoogleDrive/App.config
+++ b/GoogleDrive/App.config
@@ -20,6 +20,9 @@
     <add key="LayoutObjectId" value="g24d2e8488f_0_407" />
     <add key="SlidePageIdSize" value="{Height: {Magnitude: 3000000, Unit:'EMU'}, Width: {Magnitude: 3000000, Unit:'EMU'}}" />
     <add key="SlidePageIdTransform" value="{ScaleX: 0.1829, ScaleY: 0.1312, TranslateX: 8.75, TranslateY: 4690000.8, Unit: 'EMU'}" />
+    <add key="ImageAlign" value="TOP" />
+    <add key="ImageAlignTopPosition" value="750000" />
+    <add key="ImageAlignBottomPosition" value="4550000" />
 
   </appSettings>
   <startup>
