Working with tree folder structure instead of "flat"

--- a/GoogleDrive/App.config
+++ b/GoogleDrive/App.config
@@ -22,6 +22,9 @@
     <add key="ImageAlign" value="TOP" />
     <add key="ImageAlignTopPosition" value="750000" />
     <add key="ImageAlignBottomPosition" value="4550000" />
+    <add key="PathStartLevel" value="3" />    
+    <add key="PathSeparator" value=" - " />    
+    <add key="FolderNameSeparator" value="." />    
 
   </appSettings>
   <startup>
