--- a/GoogleDrive/App.config
+++ b/GoogleDrive/App.config
@@ -10,21 +10,30 @@
     <add key="FirstSlideText" value="⏮" />
     <add key="SpeakerNotesTextStyle" value="{fontFamily: 'Arial', fontSize:{magnitude: 24, unit: 'PT'}}" />
     <add key="SpeakerNotestTextStyleFields" value="fontFamily,fontSize" />
-    <add key="SlideIdTextBoxTextStyle" value="{fontFamily: 'Arial', fontSize:{magnitude: 18, unit: 'PT'}, foregroundColor:{opaqueColor: {rgbColor: {red: 1, green:1, blue: 1}}}}" />
-    <add key="SlideIdTextBoxTextStyleFields" value="fontFamily,fontSize,foregroundColor" />
     <add key="ParagraphStyleLTR" value="{direction: 'LEFT_TO_RIGHT', alignment: 'CENTER'}" />
     <add key="ParagraphStyleRTL" value="{direction: 'RIGHT_TO_LEFT', alignment: 'CENTER'}" />
     <add key="ParagraphStyleFields" value="direction,alignment" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
     <add key="LayoutObjectId" value="g24d2e8488f_0_407" />
+    <add key="SlideHeaderSize" value="{Height: {Magnitude: 3000000, Unit:'EMU'}, Width: {Magnitude: 3000000, Unit:'EMU'}}" />
+    <add key="SlideHeaderTransform" value="{ScaleX: 2.9422, ScaleY: 0.2134, TranslateX: 98250, TranslateY: 16350, Unit: 'EMU'}" />
+    <add key="SlideHeaderTextBoxTextStyle" value="{fontFamily: 'Arial', fontSize:{magnitude: 24, unit: 'PT'}, foregroundColor:{opaqueColor: {rgbColor: {red: 1, green:1, blue: 1}}}}" />
+    <add key="SlideHeaderTextBoxTextStyleFields" value="fontFamily,fontSize,foregroundColor" />
+    <add key="SlideFooterTextBoxTextStyle" value="{fontFamily: 'Arial', fontSize:{magnitude: 14, unit: 'PT'}, foregroundColor:{opaqueColor: {rgbColor: {red: 1, green:1, blue: 1}}}}" />
+    <add key="SlideFooterTextBoxTextStyleFields" value="fontFamily,fontSize,foregroundColor" />
+    <add key="SlideFooterSize" value="{Height: {Magnitude: 3000000, Unit:'EMU'}, Width: {Magnitude: 3000000, Unit:'EMU'}}" />
+    <add key="SlideFooterTransform" value="{ScaleX: 2.9422, ScaleY: 0.1676, TranslateX: 98250, TranslateY: 4635400, Unit: 'EMU'}" />
     <add key="SlidePageIdSize" value="{Height: {Magnitude: 3000000, Unit:'EMU'}, Width: {Magnitude: 3000000, Unit:'EMU'}}" />
     <add key="SlidePageIdTransform" value="{ScaleX: 0.1829, ScaleY: 0.1312, TranslateX: 8.75, TranslateY: 4690000.8, Unit: 'EMU'}" />
+    <add key="SlideIdTextBoxTextStyle" value="{fontFamily: 'Arial', fontSize:{magnitude: 18, unit: 'PT'}, foregroundColor:{opaqueColor: {rgbColor: {red: 1, green:1, blue: 1}}}}" />
+    <add key="SlideIdTextBoxTextStyleFields" value="fontFamily,fontSize,foregroundColor" />
     <add key="ImageAlign" value="TOP" />
     <add key="ImageAlignTopPosition" value="750000" />
     <add key="ImageAlignBottomPosition" value="4550000" />
     <add key="PathStartLevel" value="3" />    
     <add key="PathSeparator" value=" - " />    
-    <add key="FolderNameSeparator" value="." />    
+    <add key="FolderNameSeparator" value="." />
+    <add key="LookForTextInHeader" value="שאלה" />
 
   </appSettings>
   <startup>
