Add presentation download feature to inspect animations locally via MS PowerPoint

--- a/GoogleDrive/App.config
+++ b/GoogleDrive/App.config
@@ -34,6 +34,11 @@
     <add key="PathSeparator" value=" - " />    
     <add key="FolderNameSeparator" value="." />
     <add key="LookForTextInHeader" value="שאלה" />
+    <add key="MSPowerPointMimeType" value="application/vnd.openxmlformats-officedocument.presentationml.presentation"/>
+    <add key="MSPowerPointTempLocalFileName" value="TempDriveFile.pptx"/>
+    <add key="MSPowerPointPageNumberMinTop" value="360"/>
+    <add key="MSPowerPointAutoShapeMaxHeight" value="200"/>
+    <add key="WhiteColor" value="16777215"/>
 
   </appSettings>
   <startup>
