--- a/GoogleDrive/packages.config
+++ b/GoogleDrive/packages.config
@@ -5,6 +5,8 @@
   <package id="Google.Apis.Core" version="1.34.0" targetFramework="net461" />
   <package id="Google.Apis.Drive.v3" version="1.34.0.1239" targetFramework="net461" />
   <package id="Google.Apis.Slides.v1" version="1.34.0.1240" targetFramework="net461" />
+  <package id="Microsoft.Office.Interop.PowerPoint" version="15.0.4420.1017" targetFramework="net461" />
+  <package id="MicrosoftOfficeCore" version="15.0.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
   <package id="System.Net.Http" version="4.3.1" targetFramework="net461" />
   <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net461" />
