--- a/GoogleDrive/App.config
+++ b/GoogleDrive/App.config
@@ -2,8 +2,14 @@
 <configuration>
   <appSettings>
     <add key="user" value="eddy.fishman@gmail.com" />
-    <add key="rootFolderId" value="0B7tLOTLzOeFMTzdCRHZXSERueWs" />
-    <add key="PresentationsListCache" value="c:\dev\GoogleDrive\GoogleDrive\PresentationsCache.json" />
+    <add key="TeacherRootFolderId" value="0B7tLOTLzOeFMTzdCRHZXSERueWs" />
+    <add key="StudentsRootFolderId" value="1DPHlQQkhhsYEamHfJY9EC90TDLKcQBKo" />
+    <add key="TeacherCache" value="c:\dev\GoogleDrive\GoogleDrive\TeacherCache.json" />
+    <add key="StudentsCache" value="c:\dev\GoogleDrive\GoogleDrive\StudentsCache.json" />
+    <add key="TeacherPathStartLevel" value="3" />
+    <add key="StudentsPathStartLevel" value="2" />
+    <add key="FolderMimeType" value="application/vnd.google-apps.folder" />
+    <add key="PresentationMimeType" value="application/vnd.google-apps.presentation" />
     <add key="LastSlideText" value="⏭" />
     <add key="NextSlideText" value="⏩" />
     <add key="PrevSlideText" value="⏪" />
@@ -30,15 +36,14 @@
     <add key="ImageAlign" value="TOP" />
     <add key="ImageAlignTopPosition" value="750000" />
     <add key="ImageAlignBottomPosition" value="4550000" />
-    <add key="PathStartLevel" value="3" />    
     <add key="PathSeparator" value=" - " />    
     <add key="FolderNameSeparator" value="." />
     <add key="LookForTextInHeader" value="שאלה" />
-    <add key="MSPowerPointMimeType" value="application/vnd.openxmlformats-officedocument.presentationml.presentation"/>
-    <add key="MSPowerPointTempLocalFileName" value="TempDriveFile.pptx"/>
-    <add key="MSPowerPointPageNumberMinTop" value="360"/>
-    <add key="MSPowerPointAutoShapeMaxHeight" value="200"/>
-    <add key="WhiteColor" value="16777215"/>
+    <add key="MSPowerPointMimeType" value="application/vnd.openxmlformats-officedocument.presentationml.presentation" />
+    <add key="MSPowerPointTempLocalFileName" value="TempDriveFile.pptx" />
+    <add key="MSPowerPointPageNumberMinTop" value="360" />
+    <add key="MSPowerPointAutoShapeMaxHeight" value="200" />
+    <add key="WhiteColor" value="16777215" />
 
   </appSettings>
   <startup>
@@ -52,7 +57,15 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-11.0.0.0" newVersion="11.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Google.Apis" publicKeyToken="4b01fa6e34db77ab" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.48.0.0" newVersion="1.48.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Google.Apis.Core" publicKeyToken="4b01fa6e34db77ab" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.48.0.0" newVersion="1.48.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
