--- a/GoogleDrive/packages.config
+++ b/GoogleDrive/packages.config
@@ -1,13 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Google.Apis" version="1.34.0" targetFramework="net461" />
-  <package id="Google.Apis.Auth" version="1.34.0" targetFramework="net461" />
-  <package id="Google.Apis.Core" version="1.34.0" targetFramework="net461" />
+  <package id="Google.Apis" version="1.48.0" targetFramework="net461" />
+  <package id="Google.Apis.Auth" version="1.48.0" targetFramework="net461" />
+  <package id="Google.Apis.Core" version="1.48.0" targetFramework="net461" />
   <package id="Google.Apis.Drive.v3" version="1.34.0.1239" targetFramework="net461" />
+  <package id="Google.Apis.Script.v1" version="1.48.0.2007" targetFramework="net461" />
+  <package id="Google.Apis.Sheets.v4" version="1.48.0.2007" targetFramework="net461" />
   <package id="Google.Apis.Slides.v1" version="1.34.0.1240" targetFramework="net461" />
   <package id="Microsoft.Office.Interop.PowerPoint" version="15.0.4420.1017" targetFramework="net461" />
   <package id="MicrosoftOfficeCore" version="15.0.0" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net461" />
   <package id="System.Net.Http" version="4.3.1" targetFramework="net461" />
   <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net461" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net461" />
