Finish students mode - ready for debugging

--- a/GoogleDrive/App.config
+++ b/GoogleDrive/App.config
@@ -44,6 +44,15 @@
     <add key="MSPowerPointPageNumberMinTop" value="360" />
     <add key="MSPowerPointAutoShapeMaxHeight" value="200" />
     <add key="WhiteColor" value="16777215" />
+    <add key="MasterPlanSpreadsheetId" value="1O79CJuf80wfTP7ZxJ4xqiWsUMydKMcGkRs5TIq5p54E" />
+    <add key="MasterPlanSpreadsheetReadRangePattern" value="{0}!A2:F" />
+    <add key="MasterPlanSpreadsheetUpdateRangePattern" value="{0}!E{1}" />
+    <add key="RegexSpreadsheetHyperlinkExtractIdPattern" value="id=([^\&quot;]+)" />
+    <add key="RegexSpreadsheetHyperlinkExtractNamePattern" value="&quot;,\&quot;(.*)\&quot;\)" />
+    <add key="SpreadsheetHyperlinkFormat" value="=HYPERLINK(&quot;https://drive.google.com/open?id={0}&quot;,&quot;מצגת תלמידים&quot;)" />
+    <add key="RegexNonTeachingSlidePattern" value="(שיעורי בית|עמוד|תרגיל)" />
+    <add key="CopySlidesAppScriptId" value="MboWOtv3Dz9dOSLTa2xlm8NEC8Wrwpzrq" />
+    <add key="CopySlidesAppScriptFunction" value="copySlides" />
 
   </appSettings>
   <startup>
