1. Refactor command line parser 2. Support skipping time stamp check 3. Move slide page id to the bottom right and attach it a link to the next slide to allow skipping animations during Slideshow.

--- a/GoogleDrive/App.config
+++ b/GoogleDrive/App.config
@@ -30,7 +30,7 @@
     <add key="SlideFooterSize" value="{Height: {Magnitude: 3000000, Unit:'EMU'}, Width: {Magnitude: 3000000, Unit:'EMU'}}" />
     <add key="SlideFooterTransform" value="{ScaleX: 2.9422, ScaleY: 0.1676, TranslateX: 98250, TranslateY: 4635400, Unit: 'EMU'}" />
     <add key="SlidePageIdSize" value="{Height: {Magnitude: 3000000, Unit:'EMU'}, Width: {Magnitude: 3000000, Unit:'EMU'}}" />
-    <add key="SlidePageIdTransform" value="{ScaleX: 0.1829, ScaleY: 0.1312, TranslateX: 8.75, TranslateY: 4690000.8, Unit: 'EMU'}" />
+    <add key="SlidePageIdTransform" value="{ScaleX: 0.1829, ScaleY: 0.1312, TranslateX: 8581783.75, TranslateY: 4690000.8, Unit: 'EMU'}" />
     <add key="SlideIdTextBoxTextStyle" value="{fontFamily: 'Arial', fontSize:{magnitude: 18, unit: 'PT'}, foregroundColor:{opaqueColor: {rgbColor: {red: 1, green:1, blue: 1}}}}" />
     <add key="SlideIdTextBoxTextStyleFields" value="fontFamily,fontSize,foregroundColor" />
     <add key="ImageAlign" value="TOP" />
@@ -62,7 +62,7 @@
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="System.Net.Http" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.1.1.0" newVersion="4.1.1.0" />
+        <bindingRedirect oldVersion="0.0.0.0-4.1.1.3" newVersion="4.1.1.3" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
