--- a/GoogleDrive/packages.config
+++ b/GoogleDrive/packages.config
@@ -1,18 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Google.Apis" version="1.48.0" targetFramework="net461" />
-  <package id="Google.Apis.Auth" version="1.48.0" targetFramework="net461" />
-  <package id="Google.Apis.Core" version="1.48.0" targetFramework="net461" />
-  <package id="Google.Apis.Drive.v3" version="1.34.0.1239" targetFramework="net461" />
-  <package id="Google.Apis.Script.v1" version="1.48.0.2007" targetFramework="net461" />
-  <package id="Google.Apis.Sheets.v4" version="1.48.0.2007" targetFramework="net461" />
-  <package id="Google.Apis.Slides.v1" version="1.34.0.1240" targetFramework="net461" />
-  <package id="Microsoft.Office.Interop.PowerPoint" version="15.0.4420.1017" targetFramework="net461" />
+  <package id="FluentCommandLineParser-netstandard" version="1.4.3.13" targetFramework="net461" />
+  <package id="Google.Apis" version="1.61.0" targetFramework="net461" />
+  <package id="Google.Apis.Auth" version="1.61.0" targetFramework="net461" />
+  <package id="Google.Apis.Core" version="1.61.0" targetFramework="net461" />
+  <package id="Google.Apis.Drive.v3" version="1.61.0.3120" targetFramework="net461" />
+  <package id="Google.Apis.Script.v1" version="1.61.0.3040" targetFramework="net461" />
+  <package id="Google.Apis.Sheets.v4" version="1.61.0.3113" targetFramework="net461" />
+  <package id="Google.Apis.Slides.v1" version="1.61.0.3107" targetFramework="net461" />
   <package id="MicrosoftOfficeCore" version="15.0.0" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net461" />
-  <package id="System.Net.Http" version="4.3.1" targetFramework="net461" />
-  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net461" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net461" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net461" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net461" />
-  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net461" />
 </packages>
