Add support for date time conversion based on configured locale

--- a/GoogleDrive/App.config
+++ b/GoogleDrive/App.config
@@ -1,92 +1,89 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
-    <add key="user" value="eddy.fishman@gmail.com" />
-    <add key="TeacherRootFolderId" value="0B7tLOTLzOeFMTzdCRHZXSERueWs" />
-    <add key="StudentsRootFolderId" value="1DPHlQQkhhsYEamHfJY9EC90TDLKcQBKo" />
-    <add key="TeacherCache" value="c:\dev\GoogleDrive\GoogleDrive\TeacherCache.json" />
-    <add key="StudentsCache" value="c:\dev\GoogleDrive\GoogleDrive\StudentsCache.json" />
-    <add key="TeacherPathStartLevel" value="3" />
-    <add key="StudentsPathStartLevel" value="2" />
-    <add key="FolderMimeType" value="application/vnd.google-apps.folder" />
-    <add key="PresentationMimeType" value="application/vnd.google-apps.presentation" />
-    <add key="LastSlideText" value="⏭" />
-    <add key="NextSlideText" value="⏩" />
-    <add key="PrevSlideText" value="⏪" />
-    <add key="FirstSlideText" value="⏮" />
-    <add key="SpeakerNotesTextStyle" value="{fontFamily: 'Arial', fontSize:{magnitude: 24, unit: 'PT'}}" />
-    <add key="SpeakerNotestTextStyleFields" value="fontFamily,fontSize" />
-    <add key="ParagraphStyleLTR" value="{direction: 'LEFT_TO_RIGHT', alignment: 'CENTER'}" />
-    <add key="ParagraphStyleRTL" value="{direction: 'RIGHT_TO_LEFT', alignment: 'CENTER'}" />
-    <add key="ParagraphStyleFields" value="direction,alignment" />
-    <add key="ClientSettingsProvider.ServiceUri" value="" />
-    <add key="LayoutObjectId" value="g24d2e8488f_0_407" />
-    <add key="SlideHeaderSize" value="{Height: {Magnitude: 3000000, Unit:'EMU'}, Width: {Magnitude: 3000000, Unit:'EMU'}}" />
-    <add key="SlideHeaderTransform" value="{ScaleX: 2.9422, ScaleY: 0.2134, TranslateX: 98250, TranslateY: 16350, Unit: 'EMU'}" />
-    <add key="SlideHeaderTextBoxTextStyle" value="{fontFamily: 'Arial', fontSize:{magnitude: 24, unit: 'PT'}, foregroundColor:{opaqueColor: {rgbColor: {red: 1, green:1, blue: 1}}}}" />
-    <add key="SlideHeaderTextBoxTextStyleFields" value="fontFamily,fontSize,foregroundColor" />
-    <add key="SlideFooterTextBoxTextStyle" value="{fontFamily: 'Arial', fontSize:{magnitude: 14, unit: 'PT'}, foregroundColor:{opaqueColor: {rgbColor: {red: 1, green:1, blue: 1}}}}" />
-    <add key="SlideFooterTextBoxTextStyleFields" value="fontFamily,fontSize,foregroundColor" />
-    <add key="SlideFooterSize" value="{Height: {Magnitude: 3000000, Unit:'EMU'}, Width: {Magnitude: 3000000, Unit:'EMU'}}" />
-    <add key="SlideFooterTransform" value="{ScaleX: 2.9422, ScaleY: 0.1676, TranslateX: 98250, TranslateY: 4635400, Unit: 'EMU'}" />
-    <add key="SlidePageIdSize" value="{Height: {Magnitude: 3000000, Unit:'EMU'}, Width: {Magnitude: 3000000, Unit:'EMU'}}" />
-    <add key="SlidePageIdTransform" value="{ScaleX: 0.1829, ScaleY: 0.1312, TranslateX: 8581783.75, TranslateY: 4690000.8, Unit: 'EMU'}" />
-    <add key="SlideIdTextBoxTextStyle" value="{fontFamily: 'Arial', fontSize:{magnitude: 18, unit: 'PT'}, foregroundColor:{opaqueColor: {rgbColor: {red: 1, green:1, blue: 1}}}}" />
-    <add key="SlideIdTextBoxTextStyleFields" value="fontFamily,fontSize,foregroundColor" />
-    <add key="ImageAlign" value="TOP" />
-    <add key="ImageAlignTopPosition" value="750000" />
-    <add key="ImageAlignBottomPosition" value="4550000" />
-    <add key="PathSeparator" value=" - " />    
-    <add key="FolderNameSeparator" value="." />
-    <add key="LookForTextInHeader" value="שאלה" />
-    <add key="MSPowerPointMimeType" value="application/vnd.openxmlformats-officedocument.presentationml.presentation" />
-    <add key="MSPowerPointTempLocalFileName" value="TempDriveFile.pptx" />
-    <add key="MSPowerPointPageNumberMinTop" value="360" />
-    <add key="MSPowerPointAutoShapeMaxHeight" value="200" />
-    <add key="WhiteColor" value="16777215" />
-    <add key="MasterPlanSpreadsheetId" value="1O79CJuf80wfTP7ZxJ4xqiWsUMydKMcGkRs5TIq5p54E" />
-    <add key="MasterPlanSpreadsheetReadRangePattern" value="{0}!A2:F" />
-    <add key="MasterPlanSpreadsheetUpdateRangePattern" value="{0}!E{1}" />
-    <add key="RegexSpreadsheetHyperlinkExtractIdPattern" value="id=([^\&quot;]+)" />
-    <add key="RegexSpreadsheetHyperlinkExtractNamePattern" value="&quot;,\&quot;(.*)\&quot;\)" />
-    <add key="SpreadsheetHyperlinkFormat" value="=HYPERLINK(&quot;https://drive.google.com/open?id={0}&quot;,&quot;מצגת תלמידים&quot;)" />
-    <add key="RegexNonTeachingSlidePattern" value="(שיעורי בית|עמוד|תרגיל)" />
-    <add key="CopySlidesAppScriptId" value="MboWOtv3Dz9dOSLTa2xlm8NEC8Wrwpzrq" />
-    <add key="CopySlidesAppScriptFunction" value="copySlides" />
+    <add key="user" value="eddy.fishman@gmail.com"/>
+    <add key="TeacherRootFolderId" value="0B7tLOTLzOeFMTzdCRHZXSERueWs"/>
+    <add key="StudentsRootFolderId" value="1DPHlQQkhhsYEamHfJY9EC90TDLKcQBKo"/>
+    <add key="TeacherCache" value="c:\dev\GoogleDrive\GoogleDrive\TeacherCache.json"/>
+    <add key="StudentsCache" value="c:\dev\GoogleDrive\GoogleDrive\StudentsCache.json"/>
+    <add key="TeacherPathStartLevel" value="3"/>
+    <add key="StudentsPathStartLevel" value="2"/>
+    <add key="FolderMimeType" value="application/vnd.google-apps.folder"/>
+    <add key="PresentationMimeType" value="application/vnd.google-apps.presentation"/>
+    <add key="LastSlideText" value="⏭"/>
+    <add key="NextSlideText" value="⏩"/>
+    <add key="PrevSlideText" value="⏪"/>
+    <add key="FirstSlideText" value="⏮"/>
+    <add key="SpeakerNotesTextStyle" value="{fontFamily: 'Arial', fontSize:{magnitude: 24, unit: 'PT'}}"/>
+    <add key="SpeakerNotestTextStyleFields" value="fontFamily,fontSize"/>
+    <add key="ParagraphStyleLTR" value="{direction: 'LEFT_TO_RIGHT', alignment: 'CENTER'}"/>
+    <add key="ParagraphStyleRTL" value="{direction: 'RIGHT_TO_LEFT', alignment: 'CENTER'}"/>
+    <add key="ParagraphStyleFields" value="direction,alignment"/>
+    <add key="ClientSettingsProvider.ServiceUri" value=""/>
+    <add key="LayoutObjectId" value="g24d2e8488f_0_407"/>
+    <add key="SlideHeaderSize" value="{Height: {Magnitude: 3000000, Unit:'EMU'}, Width: {Magnitude: 3000000, Unit:'EMU'}}"/>
+    <add key="SlideHeaderTransform" value="{ScaleX: 2.9422, ScaleY: 0.2134, TranslateX: 98250, TranslateY: 16350, Unit: 'EMU'}"/>
+    <add key="SlideHeaderTextBoxTextStyle" value="{fontFamily: 'Arial', fontSize:{magnitude: 24, unit: 'PT'}, foregroundColor:{opaqueColor: {rgbColor: {red: 1, green:1, blue: 1}}}}"/>
+    <add key="SlideHeaderTextBoxTextStyleFields" value="fontFamily,fontSize,foregroundColor"/>
+    <add key="SlideFooterTextBoxTextStyle" value="{fontFamily: 'Arial', fontSize:{magnitude: 14, unit: 'PT'}, foregroundColor:{opaqueColor: {rgbColor: {red: 1, green:1, blue: 1}}}}"/>
+    <add key="SlideFooterTextBoxTextStyleFields" value="fontFamily,fontSize,foregroundColor"/>
+    <add key="SlideFooterSize" value="{Height: {Magnitude: 3000000, Unit:'EMU'}, Width: {Magnitude: 3000000, Unit:'EMU'}}"/>
+    <add key="SlideFooterTransform" value="{ScaleX: 2.9422, ScaleY: 0.1676, TranslateX: 98250, TranslateY: 4635400, Unit: 'EMU'}"/>
+    <add key="SlidePageIdSize" value="{Height: {Magnitude: 3000000, Unit:'EMU'}, Width: {Magnitude: 3000000, Unit:'EMU'}}"/>
+    <add key="SlidePageIdTransform" value="{ScaleX: 0.1829, ScaleY: 0.1312, TranslateX: 8581783.75, TranslateY: 4690000.8, Unit: 'EMU'}"/>
+    <add key="SlideIdTextBoxTextStyle" value="{fontFamily: 'Arial', fontSize:{magnitude: 18, unit: 'PT'}, foregroundColor:{opaqueColor: {rgbColor: {red: 1, green:1, blue: 1}}}}"/>
+    <add key="SlideIdTextBoxTextStyleFields" value="fontFamily,fontSize,foregroundColor"/>
+    <add key="ImageAlign" value="TOP"/>
+    <add key="ImageAlignTopPosition" value="750000"/>
+    <add key="ImageAlignBottomPosition" value="4550000"/>
+    <add key="PathSeparator" value=" - "/>    
+    <add key="FolderNameSeparator" value="."/>
+    <add key="LookForTextInHeader" value="שאלה"/>
+    <add key="MSPowerPointMimeType" value="application/vnd.openxmlformats-officedocument.presentationml.presentation"/>
+    <add key="MSPowerPointTempLocalFileName" value="TempDriveFile.pptx"/>
+    <add key="MSPowerPointPageNumberMinTop" value="360"/>
+    <add key="MSPowerPointAutoShapeMaxHeight" value="200"/>
+    <add key="WhiteColor" value="16777215"/>
+    <add key="MasterPlanSpreadsheetId" value="1O79CJuf80wfTP7ZxJ4xqiWsUMydKMcGkRs5TIq5p54E"/>
+    <add key="MasterPlanSpreadsheetReadRangePattern" value="{0}!A2:F"/>
+    <add key="MasterPlanSpreadsheetUpdateRangePattern" value="{0}!E{1}"/>
+    <add key="RegexSpreadsheetHyperlinkExtractIdPattern" value="id=([^\&quot;]+)"/>
+    <add key="RegexSpreadsheetHyperlinkExtractNamePattern" value="&quot;,\&quot;(.*)\&quot;\)"/>
+    <add key="SpreadsheetHyperlinkFormat" value="=HYPERLINK(&quot;https://drive.google.com/open?id={0}&quot;,&quot;מצגת תלמידים&quot;)"/>
+    <add key="RegexNonTeachingSlidePattern" value="(שיעורי בית|עמוד|תרגיל)"/>
+    <add key="CopySlidesAppScriptId" value="MboWOtv3Dz9dOSLTa2xlm8NEC8Wrwpzrq"/>
+    <add key="CopySlidesAppScriptFunction" value="copySlides"/>
+	<add key="DateTimeCulture" value="he-IL"/>
 
   </appSettings>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
   </startup>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="System.Net.Http" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.1.1.3" newVersion="4.1.1.3" />
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0" />
+        <assemblyIdentity name="Google.Apis" publicKeyToken="4b01fa6e34db77ab" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-1.48.0.0" newVersion="1.48.0.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="Google.Apis" publicKeyToken="4b01fa6e34db77ab" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.48.0.0" newVersion="1.48.0.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="Google.Apis.Core" publicKeyToken="4b01fa6e34db77ab" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.48.0.0" newVersion="1.48.0.0" />
+        <assemblyIdentity name="Google.Apis.Core" publicKeyToken="4b01fa6e34db77ab" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-1.48.0.0" newVersion="1.48.0.0"/>
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <system.web>
     <membership defaultProvider="ClientAuthenticationMembershipProvider">
       <providers>
-        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" />
+        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri=""/>
       </providers>
     </membership>
     <roleManager defaultProvider="ClientRoleProvider" enabled="true">
       <providers>
-        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
+        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400"/>
       </providers>
     </roleManager>
   </system.web>
